# oca-custom

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  eslint.config.cjs  pyproject.toml  repos.yaml  requirements.txt  test-requirements.txt
.github/workflows/: build-oca-image.yml  release.yml  test.yml
benchmarks/: README.md  locust_bench_apps_store_search.py
benchmarks/assets/: product_autocomplete.txt  uri_shop.txt  uri_shop_category.txt  uri_shop_page.txt
entrypoints/: 000_05_wait-postgres  000_08_standard-neutralize  000_10_odoo-neutralize  000_10_odoo-update  000_15_odoo-update  030_wait-wkhtmltopdf
entrypoints/neutralize/: 010_cron.sql  020_mail.sql  900_neutralized.sql
oca_all/: README.rst  __manifest__.py
oca_all/readme/: DESCRIPTION.md
oca_custom/: README.rst  __manifest__.py
oca_custom/data/: ir_action_server_data.xml  ir_cron_data.xml
oca_custom/i18n/: oca_custom.pot
oca_custom/models/: __init__.py  mail_group.py  res_config_settings.py  res_partner.py
oca_custom/readme/: CONTRIBUTORS.md
oca_custom/tests/: __init__.py  test_mail_group_partner_tag_sync.py  test_membership_channel_sync.py
oca_custom/views/: mail_group.xml  res_config_settings.xml  res_partner.xml
oca_membership/: README.rst  __manifest__.py
oca_membership/controllers/: portal.py
oca_membership/data/: membership_category_data.xml
oca_membership/i18n/: oca_membership.pot
oca_membership/models/: __init__.py  membership_category.py  res_partner.py
oca_membership/readme/: CONTRIBUTORS.md  DESCRIPTION.md
oca_membership/views/: membership_category.xml  portal_templates.xml  res_partner.xml
oca_membership_groups/: README.rst  __manifest__.py
oca_membership_groups/controllers/: portal.py
oca_membership_groups/data/: ir_cron_data.xml
oca_membership_groups/i18n/: oca_membership_groups.pot
oca_membership_groups/models/: __init__.py  mail_group.py  mail_group_member.py  membership_category.py  res_partner.py
oca_membership_groups/readme/: CONFIGURATION.md  DESCRIPTION.md  HISTORY.md  USAGE.md
oca_membership_groups/tests/: __init__.py  test_oca_membership_groups.py
oca_membership_groups/views/: mail_group.xml  mail_group_member.xml  membership_category.xml  res_partner.xml
oca_search_engine/: README.rst  __manifest__.py  hooks.py
oca_search_engine/data/: backend_data.xml  index_data.xml
oca_search_engine/i18n/: oca_search_engine.pot
oca_search_engine/models/: __init__.py  blog_post.py  res_partner.py  se_index.py  vcp_odoo_module.py  vcp_odoo_module_version.py  vcp_repository_category.py
oca_search_engine/readme/: CONTRIBUTORS.md  DESCRIPTION.md
oca_search_engine/schemas/: __init__.py  res_partner_common.py  res_partner_company.py  res_partner_person.py  vcp_oca_psc.py  vcp_odoo_author.py  vcp_odoo_maintainer.py  vcp_odoo_module_version.py  vcp_repository.py  vcp_repository_category.py
oca_search_engine/tests/: __init__.py  test_oca_se_companies.py  test_oca_se_persons.py  test_oca_se_psc.py
oca_search_engine/tools/: __init__.py  res_partner_serializer.py  vcp_odoo_module_version_serializer.py  vcp_psc_team_serializer.py  vcp_repository_category_serializer.py
oca_sponsor/: README.rst  __manifest__.py
oca_sponsor/controllers/: portal.py
oca_sponsor/data/: mail_activity_team.xml
oca_sponsor/i18n/: oca_sponsor.pot
oca_sponsor/models/: __init__.py  blog_post.py  res_partner.py  res_partner_grade.py  res_partner_industry.py  res_users.py  sponsorship_line.py
oca_sponsor/readme/: CONFIGURATION.md  CONFIGURATION.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  DESCRIPTION.md  DESCRIPTION.rst  HISTORY.md  HISTORY.rst  USAGE.md  USAGE.rst
oca_sponsor/security/: ir.model.access.csv
oca_sponsor/tests/: __init__.py  test_oca_sponsor.py
oca_sponsor/views/: blog_post.xml  mail_activity.xml  portal_templates.xml  res_partner.xml  res_partner_industry.xml  sponsorship_line.xml
oca_vcp/: README.rst  __manifest__.py
oca_vcp/i18n/: oca_vcp.pot
oca_vcp/models/: __init__.py  res_partner.py  vcp_comment.py  vcp_odoo_module.py  vcp_odoo_module_version.py  vcp_organization_history.py  vcp_repository.py  vcp_repository_category.py  vcp_review.py  vcp_rule.py  vcp_user.py
oca_vcp/readme/: DESCRIPTION.md
oca_vcp/security/: ir.model.access.csv
oca_vcp/tests/: __init__.py  test_partner_github.py  test_vcp_data.py
oca_vcp/views/: res_partner_view.xml  vcp_odoo_module_view.xml  vcp_repository_category_view.xml  vcp_repository_view.xml
oca_vcp_sponsor/: README.rst  __manifest__.py
oca_vcp_sponsor/i18n/: oca_vcp_sponsor.pot
oca_vcp_sponsor/models/: __init__.py  res_partner.py  vcp_comment.py  vcp_review.py
oca_vcp_sponsor/readme/: DESCRIPTION.md
oca_website/: README.rst  __manifest__.py
oca_website/data/: images.xml
oca_website/readme/: CONTRIBUTORS.md  DESCRIPTION.md
scripts/: fix_membership_line.py
scripts/post-mig-new-apps-store/: import_redirect_url.py  products_technical_name.csv
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
website_oca_integrator/: README.rst  __manifest__.py
website_oca_integrator/controllers/: __init__.py  main.py  portal.py  website_sale.py
website_oca_integrator/data/: ir_cron.xml
website_oca_integrator/i18n/: website_oca_integrator.pot
website_oca_integrator/models/: __init__.py  res_partner.py
website_oca_integrator/readme/: CONTRIBUTORS.md
website_oca_integrator/security/: ir.model.access.csv
website_oca_integrator/tests/: __init__.py  test_github_contributor_module.py  test_integrator.py  test_integrator_controller.py  test_ui_portal.py
website_oca_integrator/views/: view_odoo_author.xml  view_portal_templates.xml  view_res_partner.xml  website_oca_integrator_contributor_templates.xml  website_oca_integrator_templates.xml
website_sale_oca_apps/: README.rst  __manifest__.py
website_sale_oca_apps/controllers/: main.py
website_sale_oca_apps/data/: ir_config_parameter.xml
website_sale_oca_apps/i18n/: website_sale_oca_apps.pot
(+35 files in other folders)
