[build-system]
requires = ["hatchling", "hatch-odoo"]
build-backend = "hatchling.build"


[project]
name = "oca-custom"
version = "14.0"
description = "Odoo by OCA"
# readme = "README.md"
requires-python = "==3.9.*"
dynamic = ["dependencies"]

[tool.hatch.build]
packages = ["./"]

# Enable the hatch-odoo metadata hook to generate dependencies from addons manifests.
[tool.hatch.metadata.hooks.odoo-addons-dependencies]
# Enable the hatch-odoo build hook to locate the Odoo addons and package them in odoo/addons.
# if not provided, "locals" modules (those in './') are not found and cannot be installed...
[tool.hatch.build.hooks.odoo-addons-dirs]

[tool.hatch-odoo]
# dependencies that are not in the addons manifest
dependencies = [
  "odoo==14.0.*",
  # indirect unrealeased dependencies
  "odoo-addons-design-themes==14.0.*",
  # Add some constraints to Odoo deps that should be in their setup.py
  "Babel==2.9.1",
  "chardet==3.0.4",
  "decorator==4.3.0",
  "docutils==0.14",
  "ebaysdk==2.1.5",
  "freezegun==0.3.15",
  "gevent==20.9.0 ",
  "greenlet==1.1.2",
  "idna==2.6",
  "Jinja2==2.11.2",
  "libsass>=0.18.0",
  "lxml==4.6.5",
  "Mako==1.0.7",
  "MarkupSafe==1.1.0",
  "num2words==0.5.6",
  "ofxparse==0.19",
  "passlib==1.7.1",
  "pdfminer.six==20211012",
  "Pillow==8.1.1",
  "polib==1.1.0",
  "psutil==5.6.6",
  "psycopg2==2.9.10",
  "pydot==1.4.1",
  "PyPDF2==1.26.0",
  "pyserial==3.4",
  "python-dateutil==2.7.3",
  "pytz",
  "qrcode==6.1",
  "reportlab==3.5.55",
  "requests==2.21.0",
  # requests==2.25.1; python_version > '3.9'  # (Jammy) versions < 2.25 aren't compatible w/ urllib3 1.26. Bullseye = 2.25.1. min version = 2.22.0 (Focal)",
  # urllib3==1.26.5; python_version > '3.9'  # (Jammy) indirect / min version = 1.25.8 (Focal with security backports)",
  "zeep==3.2.0",
  "python-stdnum==1.8",
  "vobject==0.9.6.1",
  "Werkzeug==0.16.1 ",
  # Werkzeug==2.0.2 ; python_version > '3.9'  # (Jammy)",
  "XlsxWriter==1.1.2",
  "xlwt==1.3.*",
  "xlrd==1.2.0",
  # TODO: add constraints in github connector module
  "PyGithub<2.0.0",
  "click-odoo-contrib",
  "openupgradelib",
]
addons_dirs = ["./"]

[tool.uv]
# On OCA 14.0 series translations commits are realeased
# in pre-release state
prerelease = "allow"
# tell uv when dependencies may change
cache-keys = [{ file = "pyproject.toml" }, { file = "**/__manifest__.py" }]

[dependency-groups]
dev = [
  "parameterized>=0.9.0",
  "pytest>8",
  "pytest-odoo==2.1.2",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.1",
  "manifestoo>=1.0",
  "odoo-test-helper",
  "websocket-client",
]


[tool.uv.sources]
# Use fix updating account move line update membership line
odoo = { git = "https://github.com/OCA/OCB", rev = "refs/pull/1299/head" }

# unreleased dependency, add it to test-requirements.txt to let the
# test pipeline to use it as well
odoo-addons-design-themes = { git = "https://github.com/acsone/design-themes", branch = "14.0-with-pyproject" }
odoo14-addon-membership-delegated-partner-line = { git = "https://github.com/OCA/vertical-association", rev = "refs/pull/151/head", subdirectory = "setup/membership_delegated_partner_line" }
odoo14-addon-account_statement_import_online_wise = { git = "https://github.com/OCA/bank-statement-import", rev = "refs/pull/816/head", subdirectory = "setup/account_statement_import_online_wise" }
# Example to develop module from an other repository
# installing in editable mode
# odoo14-addon-membership-delegated-partner-line = { path = "src/vertical-association/setup/membership_delegated_partner_line", editable = true }

[tool.pytest]
addopts = "-v -s --cov-report term-missing"
