[build-system]
requires = ["hatchling", "hatch-odoo"]
build-backend = "hatchling.build"


[project]
name = "oca-custom"
version = "18.0"
description = "Odoo by OCA"
# readme = "README.md"
requires-python = "==3.12.*"
dynamic = ["dependencies"]

[tool.hatch.build]
packages = ["./"]

# Enable the hatch-odoo metadata hook to generate dependencies from addons manifests.
[tool.hatch.metadata.hooks.odoo-addons-dependencies]
# Enable the hatch-odoo build hook to locate the Odoo addons and package them in odoo/addons.
# if not provided, "locals" modules (those in './') are not found and cannot be installed...
[tool.hatch.build.hooks.odoo-addons-dirs]

[tool.hatch-odoo]
# dependencies that are not in the addons manifest
dependencies = [
  "odoo==18.0.*",
  # indirect unrealeased dependencies
  #"odoo-addons-design-themes==18.0.*",
  # Add some constraints to Odoo deps that should be in their setup.py
  "asn1crypto==1.5.1",
  "Babel==2.10.3",
  "cbor2==5.6.2",
  "chardet==5.2.0",
  "cryptography==42.0.8",
  "decorator==5.1.1",
  "docutils==0.20.1",
  "freezegun==1.2.1",
  "geoip2==2.9.0",
  "gevent==24.2.1",
  "greenlet==3.0.3",
  "idna==3.6",
  "Jinja2==3.1.2",
  "libsass==0.22.0",
  "lxml==5.2.1",
  "lxml-html-clean",
  "MarkupSafe==2.1.5",
  "num2words==0.5.13",
  "ofxparse==0.21",
  "openpyxl==3.1.2",
  "passlib==1.7.4",
  "pdfminer.six==20220319",
  "Pillow==10.2.0",
  "polib==1.1.1",
  "psutil==5.9.8",
  "psycopg2==2.9.9",
  "pyopenssl==24.1.0",
  "PyPDF2==2.12.1",
  "pyserial==3.5",
  "python-dateutil==2.8.2",
  "python-ldap==3.4.4",
  "python-stdnum==1.19",
  "pytz",
  "coverage[toml]",
  "pyusb==1.2.1",
  "qrcode==7.4.2",
  "reportlab==4.1.0",
  "requests==2.31.0",
  "rjsmin==1.2.0",
  "urllib3==2.0.7",
  "vobject==0.9.6.1",
  "Werkzeug==3.0.1",
  "xlrd==2.0.1",
  "XlsxWriter==3.1.9",
  "xlwt==1.3.0",
  "zeep==4.2.1",
  # TODO: add constraints in github connector module
  "PyGithub<2.0.0",
  "click-odoo-contrib",
  "openupgradelib",

]
addons_dirs = ["./"]

[tool.uv]
# tell uv when dependencies may change
cache-keys = [{ file = "pyproject.toml" }, { file = "**/__manifest__.py" }]

[dependency-groups]
dev = [
  "parameterized>=0.9.0",
  "pytest>8",
  "pytest-odoo==2.1.2",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.1",
  "manifestoo>=1.0",
  "odoo-test-helper",
  "websocket-client",
]


[tool.uv.sources]
# Use fix updating account move line update membership line
odoo = { git = "https://github.com/OCA/OCB", rev = "refs/pull/1319/head" }
odoo-addon-apps_product_creator = { git = "https://github.com/Therp/apps-store",branch = "18.0-mig-apps_product_creator",subdirectory = "apps_product_creator"}

# Unreleased addon sources (git), handled via uv.sources (NOT requirements/test-requirements)
odoo-addon-membership_delegated_partner_line = { git = "https://github.com/gfcapalbo/vertical-association", branch = "18.0-MIG-membership_delegated_partner_line", subdirectory = "membership_delegated_partner_line" }
odoo-addon-account_statement_import_online_wise = { git = "https://github.com/Therp/bank-statement-import", branch = "18.0-mig-account-statement-import-online-wise", subdirectory = "account_statement_import_online_wise" }
odoo-addon-github_connector_oca = { git = "https://github.com/Therp/interface-github", branch = "18.0-mig-github_connector_oca", subdirectory = "github_connector_oca" }
odoo-addon-crowdfunding = { git = "https://github.com/hbrunn/crowdfunding", branch = "18.0-mig-crowdfunding", subdirectory = "crowdfunding" }
odoo-addon-crowdfunding_public_pledge = { git = "https://github.com/hbrunn/crowdfunding", branch = "18.0-mig-crowdfunding", subdirectory = "crowdfunding_public_pledge" }

# Example to develop module from another repository in editable mode
# odoo-addon-membership-delegated-partner-line = { path = "src/vertical-association/setup/membership_delegated_partner_line", editable = true }


[tool.pytest]
addopts = "-v -s --cov-report term-missing"
